--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,11 @@
             ],
             "styles": [
               "src/assets/scss/style.scss",
-              "src/assets/css/materialdesignicons.min.css"
+              "src/assets/css/materialdesignicons.min.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           },
