--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
-    "angular-feather": "^6.0.9",
-    "bootstrap": "^4.4.1",
+    "angular-feather": "^6.1.0",
+    "bootstrap": "^4.6.1",
     "ngx-youtube-player": "^7.1.5",
+    "primeicons": "^4.1.0",
+    "primeng": "^12.2.1",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "tslib": "^1.14.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -34,9 +36,9 @@
     "@angular/cli": "~9.0.3",
     "@angular/compiler-cli": "~9.0.2",
     "@angular/language-service": "~9.0.2",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^3.5.14",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^12.20.36",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -44,10 +46,10 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "typescript": "^3.7.7"
   }
 }
