--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/assets/scss/style.scss",
-              "src/assets/css/materialdesignicons.min.css"
+              "src/assets/scss/style.scss"
             ],
             "scripts": []
           },
