--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "angular-feather": "^6.1.0",
     "bootstrap": "^4.6.1",
     "ngx-youtube-player": "^7.1.5",
+    "primeicons": "^4.1.0",
+    "primeng": "^12.2.2",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
