--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
     "angular-feather": "^6.1.0",
     "bootstrap": "^4.6.1",
+    "feather-icons": "^4.28.0",
     "ngx-youtube-player": "^7.1.5",
+    "primeflex": "^3.1.0",
     "primeicons": "^4.1.0",
     "primeng": "^12.2.2",
     "rxjs": "~6.5.4",
