--- a/angular.json
+++ b/angular.json
@@ -27,11 +27,12 @@
               "src/assets"
             ],
             "styles": [
+              "src/styles.scss",
               "src/assets/scss/style.scss",
-              "node_modules/primeflex/primeflex.css",
               "node_modules/primeng/resources/themes/saga-green/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css"
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/material-icons/iconfont/material-icons.css" 
             ],
             "scripts": [],
             "vendorChunk": true,
