--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "angular-feather": "^6.1.0",
     "bootstrap": "^4.6.1",
     "feather-icons": "^4.28.0",
+    "material-icons": "^1.10.1",
+    "ng-material-icon": "0.0.3",
     "ngx-youtube-player": "^7.1.5",
     "primeflex": "^3.1.0",
     "primeicons": "^4.1.0",
